--- a/templates/rating.html
+++ b/templates/rating.html
@@ -2,10 +2,12 @@
 
 {% block head %}
 <title>Rating</title>
+<link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/style_pre_login.css') }}">
+
 {% endblock %}
 
 {% block body %}
-<h1 class="is-size-1 has-text-center">
+<h1 class="is-size-3 has-text-centered title has-text-dark">
     Thank you for your order
 </h1>
 {% endblock %}
