--- a/templates/menu_option.html
+++ b/templates/menu_option.html
@@ -9,6 +9,7 @@
 <br>
 <br>
 <br>
+
 {% with messages = get_flashed_messages() %}
 {% if messages %}
     <div class="notification is-danger">
@@ -16,8 +17,8 @@
     </div>
 {% endif %}
 {% endwith %}
-<body>
-    <a class = "menu-option" href="{{ url_for('view_menu') }}">View menu</a>
+
+        <a class = "menu-option break-menu" href="{{ url_for('view_menu') }}">View menu</a>
         <a class = "menu-option" href="{{ url_for('view_account') }}">View account</a>
         <a class = "menu-option" href="{{ url_for('contact_us') }}">Contact us</a>
 
