--- a/templates/view_option/view_menu/most_common_dishes.html
+++ b/templates/view_option/view_menu/most_common_dishes.html
@@ -6,7 +6,7 @@
 
 {%endblock%}
 {% block body%}
-<img class = "menu-img" src="../../../static/img/most_common_dishes.jpg" alt="">
+<img class = "food-img" class = "menu-img" src="../../../static/img/most_common_dishes.jpg" alt="">
 <div class="box choosing-option has-text-weight-bold">Most common dishes</div>
 {% with messages = get_flashed_messages() %}
 {% if messages %}
