--- a/templates/view_option/view_menu/appetizers.html
+++ b/templates/view_option/view_menu/appetizers.html
@@ -6,7 +6,7 @@
 
 {%endblock%}
 {% block body%}
-<img src="../../../static/img/appetizers.jpg" alt="">
+<img class = "food-img" src="../../../static/img/appetizers.jpg" alt="">
 <div class="box choosing-option has-text-weight-bold">Appetizers</div>
 {% with messages = get_flashed_messages() %}
 {% if messages %}
