--- a/templates/base.html
+++ b/templates/base.html
@@ -47,7 +47,7 @@
                 {% endif %}
                 <ul >
                     <li>
-                        <a style="color:orange;" href="{{ url_for('shopping_cart') }}"><b>Your Cart</b></a>
+                        <a style="color:orange;" class = "nav-item" href="{{ url_for('shopping_cart') }}"><b>Your Cart</b></a>
                     </li>
                     <li>
                         <a style="color:orange;" class = "nav-item" href="{{ url_for('order_manager') }}"><b>Your Order</b></a>
@@ -70,7 +70,10 @@
     </nav>
   </div>
 
-<script src = "index.js"></script>
+<script
+      type="text/javascript"
+      src="{{ url_for('static', filename='method.js') }}"
+></script>
 <script
   src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
   integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
