--- a/static/styles/shopping_cart.css
+++ b/static/styles/shopping_cart.css
@@ -1,248 +1,76 @@
-:root {
-    --primary-color: rgb(255, 132, 0);
-}
-
-
-/* Global "table" column settings */
-.product-image { float: left; width: 20%; }
-.product-details { float: left; width: 37%; }
-.product-price { float: left; width: 12%; }
-.product-quantity { float: left; width: 10%; }
-.product-removal { float: left; width: 9%; }
-.product-line-price { float: left; width: 12%; text-align: right; }
-
-
-/* This is used as the traditional .clearfix class */
-.group:before,
-.group:after {
-    content: '';
-    display: table;
-}
-.group:after {
-    clear: both;
-}
-.group {
-    zoom: 1;
-}
-
-
-/* Apply clearfix in a few places */
-.shopping-cart, .column-labels, .product, .totals-item {
-  @extend .group;
-}
-
-
-/* Apply dollar signs */
-.product .product-price:before, .product .product-line-price:before, .totals-value:before {
-  content: '$';
-}
-
-
-/* Body/Header stuff */
-body {
-  padding: 0px 30px 30px 20px;
-  font-family: $font-default;
-  font-weight: 100;
-}
-
-h1 {
-  font-weight: 100;
-}
-
-label {
-  color: $color-label;
-}
-
-.shopping-cart {
-  margin-top: -45px;
-}
-
-
-/* Column headers */
-.column-labels {
-  label {
-    padding-bottom: 15px;
-    margin-bottom: 15px;
-    border-bottom: 1px solid $color-border;
-  }
-
-  .product-image, .product-details, .product-removal {
-    text-indent: -9999px;
-  }
-}
-
-
-/* Product entries */
-.product {
-  margin-bottom: 20px;
-  padding-bottom: 10px;
-  border-bottom: 1px solid $color-border;
-
-  .product-image {
-    text-align: center;
-    img {
-      width: 100px;
+.sale_type {
+  del {
+    color: rgba(red, 0.5);
+    text-decoration: none;
+    position: relative;
+    &:before {
+      content: " ";
+      display: block;
+      width: 100%;
+      border-top: 2px solid rgba(red, 0.8);
+      height: 12px;
+      position: absolute;
+      bottom: 0;
+      left: 0;
     }
   }
-
-  .product-details {
-    .product-title {
-      margin-right: 20px;
-      font-family: $font-bold;
-    }
-    .product-description {
-      margin: 5px 20px 5px 0;
-      line-height: 1.4em;
-    }
-  }
-
-  .product-quantity {
-    input {
-      width: 40px;
-
-    }
-  }
-
-  .remove-product {
-    border: 0;
-    padding: 4px 8px;
-    background-color: #c66;
-    color: #fff;
-    font-family: $font-bold;
-    font-size: 12px;
-    border-radius: 3px;
-  }
-
-  .remove-product:hover {
-    background-color: #a44;
+  ins {
+    color: black;
+    font-size: 32px;
+    text-decoration: none;
+    padding: 1em 1em 1em .5em;
   }
 }
 
-
-/* Totals section */
-.totals {
-  .totals-item {
-    float: right;
-    clear: both;
-    width: 100%;
-    margin-bottom: 10px;
-
-    label {
-      float: left;
-      clear: both;
-      width: 79%;
-      text-align: right;
-    }
-
-    .totals-value {
-      float: right;
-      width: 21%;
-      text-align: right;
-    }
-  }
-
-  .totals-item-total {
-    font-family: $font-bold;
-  }
+.cd-cart__trigger,
+.cd-cart__content {
+  position: fixed;
+  bottom: 20px;
+  right: 5%;
+  transition: transform .2s;
 }
 
-.checkout {
-  float: right;
-  border: 0;
-  margin-top: 20px;
-  padding: 6px 25px;
-  background-color: #6b6;
-  color: #fff;
-  font-size: 25px;
-  border-radius: 3px;
+.cd-cart--empty .cd-cart__trigger,
+.cd-cart--empty .cd-cart__content { // hide cart
+  transform: translateY(150px);
 }
 
-.checkout:hover {
-  background-color: #494;
+.cd-cart__layout {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: 2;
+  overflow: hidden;
+  height: 72px;
+  width: 72px;
+  border-radius: var(--radius);
+  transition: height .4s .1s, width  .4s .1s, box-shadow .3s;
+  transition-timing-function: cubic-bezier(.67,.17,.32,.95);
+  background: var(--cd-color-3);
+  box-shadow: 0 4px 30px rgba(#000, .17);
 }
 
-/* Make adjustments for tablet */
-@media screen and (max-width: 650px) {
-
-  .shopping-cart {
-    margin: 0;
-    padding-top: 20px;
-    border-top: 1px solid $color-border;
-  }
-
-  .column-labels {
-    display: none;
-  }
-
-  .product-image {
-    float: right;
-    width: auto;
-    img {
-      margin: 0 0 10px 10px;
-    }
-  }
-
-  .product-details {
-    float: none;
-    margin-bottom: 10px;
-    width: auto;
-  }
-
-  .product-price {
-    clear: both;
-    width: 70px;
-  }
-
-  .product-quantity {
-    width: 100px;
-    input {
-      margin-left: 20px;
-    }
-  }
-
-  .product-quantity:before {
-    content: 'x';
-  }
-
-  .product-removal {
-    width: auto;
-  }
-
-  .product-line-price {
-    float: right;
-    width: 70px;
-  }
-
+.cd-cart--open .cd-cart__layout {
+  height: 100%;
+  width: 100%;
+  transition-delay: 0s;
 }
 
+.cd-cart__product--deleted { // this class is added to an item when it is removed form the cart
+  position: absolute;
+  left: 0;
+  width: 100%;
+  opacity: 0;
+  animation: cd-item-slide-out .3s forwards;
+}
 
-/* Make more adjustments for phone */
-@media screen and (max-width: 350px) {
-
-  .product-removal {
-    float: right;
+@keyframes cd-item-slide-out {
+  0% {
+    transform: translateX(0);
+    opacity: 1;
   }
-
-  .product-line-price {
-    float: right;
-    clear: left;
-    width: auto;
-    margin-top: 10px;
-  }
-
-  .product .product-line-price:before {
-    content: 'Item Total: $';
-  }
-
-  .totals {
-    .totals-item {
-      label {
-        width: 60%;
-      }
-
-      .totals-value {
-        width: 40%;
-      }
-    }
+  100% {
+    transform: translateX(80px);
+    opacity: 0;
   }
 }
